--- a/others/minifer.html
+++ b/others/minifer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Roblox Luau Minifier</title>
+    <title>Luau Minifier</title>
     <link href="https://api.fontshare.com/v2/css?f[]=clash-display@600&f[]=general-sans@400,500,600&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -18,53 +18,45 @@
             --glass: rgba(15, 23, 42, 0.7); --grad: linear-gradient(135deg, #38bdf8, #818cf8);
         }
 
-        body { background: var(--bg); color: var(--text); font-family: 'General Sans', sans-serif; min-height: 100vh; transition: 0.2s; }
+        body { background: var(--bg); color: var(--text); font-family: 'General Sans', sans-serif; min-height: 100vh; display: flex; flex-direction: column; transition: 0.2s; }
 
-        /* DEFAULT STYLE: FLAT & SOLID */
+        /* DEFAULT STYLE */
         [data-style="default"] body { background: var(--bg) !important; }
-        [data-style="default"] .minifier-card { 
-            background: var(--card) !important; 
-            border: 1px solid var(--border) !important; 
-            border-radius: 4px; box-shadow: none; backdrop-filter: none; 
-        }
+        [data-style="default"] .minifier-card { background: var(--card) !important; border: 1px solid var(--border) !important; border-radius: 4px; box-shadow: none; backdrop-filter: none; }
         [data-style="default"] .pill-btn { background: var(--btn-bg); border: 1px solid var(--border); border-radius: 4px; color: var(--text); }
         [data-style="default"] .pill-btn.active { background: var(--accent); color: #fff; border-color: var(--accent); }
         [data-style="default"] .action-btn { background: var(--accent); color: #fff; border-radius: 4px; }
         [data-style="default"] .logo-text { background: none; -webkit-text-fill-color: var(--text); color: var(--text); }
 
-        /* ABAUI STYLE: GLASS & GRADIENTS */
+        /* ABAUI STYLE */
         [data-style="abaui"] body { background: linear-gradient(135deg, var(--bg), var(--card)) !important; }
-        [data-style="abaui"] .minifier-card { 
-            background: var(--glass) !important; 
-            backdrop-filter: blur(20px) saturate(180%); 
-            border: 1px solid rgba(255,255,255,0.1); 
-            border-radius: 24px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); 
-        }
+        [data-style="abaui"] .minifier-card { background: var(--glass) !important; backdrop-filter: blur(20px) saturate(180%); border: 1px solid rgba(255,255,255,0.1); border-radius: 24px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); }
         [data-style="abaui"] .pill-btn { background: var(--glass); border: 1px solid var(--border); border-radius: 12px; }
         [data-style="abaui"] .pill-btn.active { background: var(--grad); color: #fff; border: none; }
-        [data-style="abaui"] .action-btn { background: var(--grad); border-radius: 10px; box-shadow: 0 4px 15px rgba(14,165,233,0.3); }
-        [data-style="abaui"] .logo-text { 
-            font-family: 'Clash Display'; background: var(--grad); 
-            -webkit-background-clip: text; -webkit-text-fill-color: transparent; 
-        }
+        [data-style="abaui"] .action-btn { background: var(--grad); border-radius: 10px; }
+        [data-style="abaui"] .logo-text { font-family: 'Clash Display'; background: var(--grad); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
 
         .editor-container { display: grid; grid-template-columns: 1fr 1fr; gap: 1.5rem; height: 50vh; }
         @media (max-width: 1024px) { .editor-container { grid-template-columns: 1fr; height: auto; } .minifier-card { height: 400px; } }
 
-        .line-gutter { font-family: monospace; font-size: 11px; padding: 1.5rem 0.5rem; text-align: right; min-width: 45px; opacity: 0.4; border-right: 1px solid var(--border); overflow: hidden; }
-        textarea { width: 100%; height: 100%; background: transparent; border: none; outline: none; padding: 1.5rem; font-family: monospace; font-size: 14px; color: var(--text); resize: none; }
+        /* FIX: POSITIONAL GUTTER */
+        .editor-wrap { position: relative; display: flex; flex: 1; overflow: hidden; }
+        .line-gutter { font-family: 'JetBrains Mono', monospace; font-size: 13px; padding: 1.5rem 0.5rem; text-align: right; min-width: 50px; opacity: 0.3; border-right: 1px solid var(--border); background: transparent; user-select: none; pointer-events: none; white-space: pre; }
+        textarea { flex: 1; background: transparent; border: none; outline: none; padding: 1.5rem; font-family: 'JetBrains Mono', monospace; font-size: 13px; color: var(--text); resize: none; line-height: 1.5; tab-size: 4; }
+
         .pill-btn { padding: 0.5rem 1rem; font-size: 0.8rem; font-weight: 600; transition: 0.2s; }
         .action-btn { color: white; padding: 0.5rem 1.25rem; font-size: 0.75rem; font-weight: 600; }
         .stat-bar { padding: 0.75rem 1.5rem; font-size: 0.65rem; font-weight: 700; display: flex; gap: 1rem; border-top: 1px solid var(--border); opacity: 0.7; }
+        .impressed { color: #10b981; animation: blink 1s infinite; }
+        @keyframes blink { 50% { opacity: 0.4; } }
         .site-footer { margin-top: auto; padding: 2rem; text-align: center; opacity: 0.6; font-size: 0.75rem; border-top: 1px solid var(--border); }
-        .no-scrollbar::-webkit-scrollbar { display: none; }
     </style>
 </head>
 <body class="p-4 md:p-10">
 
     <div class="max-w-[1400px] mx-auto w-full">
         <nav class="flex flex-col md:flex-row justify-between items-center mb-10 gap-6">
-            <h1 class="logo-text text-3xl font-bold tracking-tight">Roblox Luau Minifier</h1>
+            <h1 class="logo-text text-3xl font-bold tracking-tight">Luau Minifier</h1>
             <div class="flex gap-3">
                 <button onclick="toggleTheme()" class="pill-btn">Theme: <span id="theme-label">Dark</span></button>
                 <button onclick="toggleStyle()" class="pill-btn">Style: <span id="style-label">Abaui</span></button>
@@ -84,37 +76,37 @@
         <div class="editor-container">
             <div class="minifier-card flex flex-col">
                 <div class="flex justify-between items-center px-6 py-4 border-b border-[var(--border)]">
-                    <span class="text-[0.7rem] font-bold uppercase opacity-50">Input</span>
+                    <span class="text-[0.7rem] font-bold uppercase opacity-50">Input Source</span>
                     <button onclick="doPaste()" class="action-btn">Paste</button>
                 </div>
-                <div class="flex flex-1 overflow-hidden">
+                <div class="editor-wrap">
                     <div id="gutter-in" class="line-gutter">1</div>
-                    <textarea id="input" spellcheck="false" placeholder="-- Enter code..."></textarea>
+                    <textarea id="input" spellcheck="false" wrap="off" placeholder="-- Paste Luau code..."></textarea>
                 </div>
                 <div class="stat-bar" id="stat-in">
-                    <span id="in-lines">Lines: 0</span> <span id="in-chars">Chars: 0</span> <span id="in-size">Size: 0 B</span>
+                    <span id="in-lines">Lines: 0</span> <span id="in-size">Size: 0 B</span>
                 </div>
             </div>
 
             <div class="minifier-card flex flex-col">
                 <div class="flex justify-between items-center px-6 py-4 border-b border-[var(--border)]">
-                    <span class="text-[0.7rem] font-bold uppercase opacity-50">Output</span>
+                    <span class="text-[0.7rem] font-bold uppercase opacity-50">Minified</span>
                     <button onclick="doCopy()" id="copy-btn" class="action-btn">Copy</button>
                 </div>
-                <div class="flex flex-1 overflow-hidden">
+                <div class="editor-wrap">
                     <div id="gutter-out" class="line-gutter">1</div>
-                    <textarea id="output" readonly spellcheck="false" placeholder="Result..."></textarea>
+                    <textarea id="output" readonly wrap="off" spellcheck="false"></textarea>
                 </div>
                 <div class="stat-bar" id="stat-out">
-                    <span id="out-lines">Lines: 0</span> <span id="out-chars">Chars: 0</span> <span id="out-size">Size: 0 B</span>
+                    <span id="out-lines">Lines: 0</span> <span id="out-size">Size: 0 B</span>
                 </div>
             </div>
         </div>
     </div>
 
     <footer class="site-footer">
-        <p>The owner of website respects your privacy and the website does not log anything from you.</p>
-        <p>Your ISP, Your Browser Service/Brand, Vercel (The Host) Logs Your Activity. <b>VPN Recommended</b>.</p>
+        <p>The owner respects your privacy and logs nothing.</p>
+        <p>ISP, browser, and host (Vercel/Google) log activity. <b>VPN recommended</b>.</p>
     </footer>
 
     <script>
@@ -138,8 +130,7 @@
         function setMode(m) {
             mode = m;
             document.querySelectorAll('.pill-btn').forEach(b => b.classList.remove('active'));
-            const target = document.getElementById('m-' + m);
-            if(target) target.classList.add('active');
+            document.getElementById('m-' + m).classList.add('active');
             process();
         }
 
@@ -149,9 +140,24 @@
             return (b / Math.pow(1024, i)).toFixed(2) + " " + ['B', 'KB', 'MB', 'GB'][i];
         }
 
+        function updateStats(t, p) {
+            const bytes = new Blob([t]).size;
+            document.getElementById(p + '-lines').innerText = `Lines: ${t ? t.split('\n').length : 0}`;
+            document.getElementById(p + '-size').innerText = `Size: ${formatSize(bytes)}`;
+            
+            const bar = document.getElementById('stat-' + p);
+            const old = bar.querySelector('.impressed'); if(old) old.remove();
+            if(bytes >= 1048576) { // 1MB+
+                const span = document.createElement('span');
+                span.className = 'impressed';
+                span.innerText = "✨ IMPRESSED! MASSIVE SCRIPT.";
+                bar.appendChild(span);
+            }
+        }
+
         function process() {
             let c = elIn.value;
-            if (!c) { elOut.value = ""; updateStats("", 'in'); updateStats("", 'out'); return; }
+            if (!c) { elOut.value = ""; updateStats("", 'in'); updateStats("", 'out'); sync("", 'gutter-in'); sync("", 'gutter-out'); return; }
             
             c = c.replace(/--\[(=*)\[[\s\S]*?\]\1\]/g, ''); 
             if (mode !== 'lines') c = c.replace(/\s*--.*$/gm, '');
@@ -175,21 +181,16 @@
             sync(elIn.value, 'gutter-in'); sync(elOut.value, 'gutter-out');
         }
 
-        function updateStats(t, p) {
-            document.getElementById(p + '-lines').innerText = `Lines: ${t ? t.split('\n').length : 0}`;
-            document.getElementById(p + '-chars').innerText = `Chars: ${t.length}`;
-            document.getElementById(p + '-size').innerText = `Size: ${formatSize(new Blob([t]).size)}`;
-        }
-
         function sync(t, id) {
-            let h = ''; const l = t.split('\n').length;
-            for (let i = 1; i <= l; i++) h += i + '<br>';
-            document.getElementById(id).innerHTML = h;
+            const l = t.split('\n').length;
+            let h = ''; for (let i = 1; i <= l; i++) h += i + '\n';
+            document.getElementById(id).innerText = h;
         }
 
         async function doPaste() { elIn.value = await navigator.clipboard.readText(); process(); }
         function doCopy() { navigator.clipboard.writeText(elOut.value); document.getElementById('copy-btn').innerText = "Done!"; setTimeout(() => document.getElementById('copy-btn').innerText = "Copy", 1000); }
         function reset() { elIn.value = ""; process(); }
+
         elIn.oninput = process;
         elIn.onscroll = () => document.getElementById('gutter-in').scrollTop = elIn.scrollTop;
         elOut.onscroll = () => document.getElementById('gutter-out').scrollTop = elOut.scrollTop;
