--- a/others/minifer.html
+++ b/others/minifer.html
@@ -18,38 +18,49 @@
             --glass: rgba(15, 23, 42, 0.7); --grad: linear-gradient(135deg, #38bdf8, #818cf8);
         }
 
-        body { background: var(--bg); color: var(--text); font-family: 'General Sans', sans-serif; min-height: 100vh; display: flex; flex-direction: column; transition: 0.2s; }
+        body { background: var(--bg); color: var(--text); font-family: 'General Sans', sans-serif; min-height: 100vh; display: flex; flex-direction: column; transition: 0.2s; overflow-x: hidden; }
 
-        /* DEFAULT STYLE */
+        /* Style Logic */
         [data-style="default"] body { background: var(--bg) !important; }
         [data-style="default"] .minifier-card { background: var(--card) !important; border: 1px solid var(--border) !important; border-radius: 4px; box-shadow: none; backdrop-filter: none; }
         [data-style="default"] .pill-btn { background: var(--btn-bg); border: 1px solid var(--border); border-radius: 4px; color: var(--text); }
         [data-style="default"] .pill-btn.active { background: var(--accent); color: #fff; border-color: var(--accent); }
         [data-style="default"] .action-btn { background: var(--accent); color: #fff; border-radius: 4px; }
-        [data-style="default"] .logo-text { background: none; -webkit-text-fill-color: var(--text); color: var(--text); }
 
-        /* ABAUI STYLE */
         [data-style="abaui"] body { background: linear-gradient(135deg, var(--bg), var(--card)) !important; }
         [data-style="abaui"] .minifier-card { background: var(--glass) !important; backdrop-filter: blur(20px) saturate(180%); border: 1px solid rgba(255,255,255,0.1); border-radius: 24px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); }
         [data-style="abaui"] .pill-btn { background: var(--glass); border: 1px solid var(--border); border-radius: 12px; }
         [data-style="abaui"] .pill-btn.active { background: var(--grad); color: #fff; border: none; }
         [data-style="abaui"] .action-btn { background: var(--grad); border-radius: 10px; }
-        [data-style="abaui"] .logo-text { font-family: 'Clash Display'; background: var(--grad); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
 
-        .editor-container { display: grid; grid-template-columns: 1fr 1fr; gap: 1.5rem; height: 50vh; }
+        .editor-container { display: grid; grid-template-columns: 1fr 1fr; gap: 1.5rem; height: 50vh; padding: 0 1rem; }
         @media (max-width: 1024px) { .editor-container { grid-template-columns: 1fr; height: auto; } .minifier-card { height: 400px; } }
 
-        /* FIX: POSITIONAL GUTTER */
-        .editor-wrap { position: relative; display: flex; flex: 1; overflow: hidden; }
-        .line-gutter { font-family: 'JetBrains Mono', monospace; font-size: 13px; padding: 1.5rem 0.5rem; text-align: right; min-width: 50px; opacity: 0.3; border-right: 1px solid var(--border); background: transparent; user-select: none; pointer-events: none; white-space: pre; }
-        textarea { flex: 1; background: transparent; border: none; outline: none; padding: 1.5rem; font-family: 'JetBrains Mono', monospace; font-size: 13px; color: var(--text); resize: none; line-height: 1.5; tab-size: 4; }
+        /* Fixed Gutter Alignment */
+        .editor-wrap { position: relative; display: flex; flex: 1; overflow: hidden; border-radius: inherit; }
+        .line-gutter { 
+            font-family: 'ui-monospace', monospace; font-size: 13px; line-height: 20px; 
+            padding: 20px 0; text-align: right; min-width: 45px; opacity: 0.3; 
+            border-right: 1px solid var(--border); user-select: none; pointer-events: none; 
+            background: transparent; overflow: hidden; white-space: pre;
+        }
+        textarea { 
+            flex: 1; background: transparent; border: none; outline: none; padding: 20px; 
+            font-family: 'ui-monospace', monospace; font-size: 13px; line-height: 20px; 
+            color: var(--text); resize: none; tab-size: 4; white-space: pre; overflow: auto;
+        }
 
-        .pill-btn { padding: 0.5rem 1rem; font-size: 0.8rem; font-weight: 600; transition: 0.2s; }
+        .pill-btn { padding: 0.5rem 1rem; font-size: 0.8rem; font-weight: 600; transition: 0.2s; white-space: nowrap; }
         .action-btn { color: white; padding: 0.5rem 1.25rem; font-size: 0.75rem; font-weight: 600; }
         .stat-bar { padding: 0.75rem 1.5rem; font-size: 0.65rem; font-weight: 700; display: flex; gap: 1rem; border-top: 1px solid var(--border); opacity: 0.7; }
         .impressed { color: #10b981; animation: blink 1s infinite; }
         @keyframes blink { 50% { opacity: 0.4; } }
-        .site-footer { margin-top: auto; padding: 2rem; text-align: center; opacity: 0.6; font-size: 0.75rem; border-top: 1px solid var(--border); }
+        
+        .site-footer { 
+            margin-top: auto; padding: 2rem; text-align: center; opacity: 0.7; 
+            font-size: 0.8rem; border-top: 1px solid var(--border); line-height: 1.6;
+        }
+        .site-footer b { color: var(--accent); }
     </style>
 </head>
 <body class="p-4 md:p-10">
@@ -76,12 +87,12 @@
         <div class="editor-container">
             <div class="minifier-card flex flex-col">
                 <div class="flex justify-between items-center px-6 py-4 border-b border-[var(--border)]">
-                    <span class="text-[0.7rem] font-bold uppercase opacity-50">Input Source</span>
+                    <span class="text-[0.7rem] font-bold uppercase opacity-50">Input</span>
                     <button onclick="doPaste()" class="action-btn">Paste</button>
                 </div>
                 <div class="editor-wrap">
                     <div id="gutter-in" class="line-gutter">1</div>
-                    <textarea id="input" spellcheck="false" wrap="off" placeholder="-- Paste Luau code..."></textarea>
+                    <textarea id="input" spellcheck="false" wrap="off" placeholder="-- Luau script..."></textarea>
                 </div>
                 <div class="stat-bar" id="stat-in">
                     <span id="in-lines">Lines: 0</span> <span id="in-size">Size: 0 B</span>
@@ -90,7 +101,7 @@
 
             <div class="minifier-card flex flex-col">
                 <div class="flex justify-between items-center px-6 py-4 border-b border-[var(--border)]">
-                    <span class="text-[0.7rem] font-bold uppercase opacity-50">Minified</span>
+                    <span class="text-[0.7rem] font-bold uppercase opacity-50">Result</span>
                     <button onclick="doCopy()" id="copy-btn" class="action-btn">Copy</button>
                 </div>
                 <div class="editor-wrap">
@@ -105,8 +116,8 @@
     </div>
 
     <footer class="site-footer">
-        <p>The owner respects your privacy and logs nothing.</p>
-        <p>ISP, browser, and host (Vercel/Google) log activity. <b>VPN recommended</b>.</p>
+        <p>The owner of this website respects your internet privacy; this site does not log any of your data.</p>
+        <p>Your ISP, browser, operating system, and the host (Vercel) log your activity. <b>VPN is recommended.</b></p>
     </footer>
 
     <script>
@@ -144,14 +155,10 @@
             const bytes = new Blob([t]).size;
             document.getElementById(p + '-lines').innerText = `Lines: ${t ? t.split('\n').length : 0}`;
             document.getElementById(p + '-size').innerText = `Size: ${formatSize(bytes)}`;
-            
             const bar = document.getElementById('stat-' + p);
             const old = bar.querySelector('.impressed'); if(old) old.remove();
-            if(bytes >= 1048576) { // 1MB+
-                const span = document.createElement('span');
-                span.className = 'impressed';
-                span.innerText = "✨ IMPRESSED! MASSIVE SCRIPT.";
-                bar.appendChild(span);
+            if(bytes >= 1048576) {
+                const s = document.createElement('span'); s.className = 'impressed'; s.innerText = "✨ IMPRESSED!"; bar.appendChild(s);
             }
         }
 
@@ -163,10 +170,19 @@
             if (mode !== 'lines') c = c.replace(/\s*--.*$/gm, '');
             if (mode !== 'comments') c = c.replace(/^\s*[\r\n]/gm, '');
             if (['medium', 'strong', 'very-strong'].includes(mode)) c = c.replace(/\s*([=+*/%^#<>~])\s*/g, '$1');
-            if (['strong', 'very-strong'].includes(mode)) c = c.replace(/\s+/g, ' ').replace(/\s*([=+\-*/%^#<>~;:,{}()\[\]])\s*/g, '$1').trim();
+
+            if (['strong', 'very-strong'].includes(mode)) {
+                c = c.replace(/\b([a-zA-Z_]\w*)\s*\(\s*(["'])(.*?)\2\s*\)/g, (m, func, quote, content) => {
+                    if (content.includes('\\') || content.includes('\n')) return m;
+                    return `${func}'${content}'`;
+                });
+                c = c.replace(/\s+/g, ' ').replace(/\s*([=+\-*/%^#<>~;:,{}()\[\]])\s*/g, '$1').trim();
+            }
+
             if (mode === 'very-strong') {
                 let cnt = 0, map = {};
                 c = c.replace(/\blocal\s+([a-zA-Z_]\w*)/g, (m, n) => {
+                    if (["_G", "shared", "script", "game", "workspace"].includes(n)) return m;
                     if (!map[n]) {
                         const chars = 'abcdefghijklmnopqrstuvwxyz';
                         let r = '', i = cnt++;
@@ -176,6 +192,7 @@
                     return `local ${map[n]}`;
                 });
             }
+
             elOut.value = c;
             updateStats(elIn.value, 'in'); updateStats(elOut.value, 'out');
             sync(elIn.value, 'gutter-in'); sync(elOut.value, 'gutter-out');
@@ -192,8 +209,8 @@
         function reset() { elIn.value = ""; process(); }
 
         elIn.oninput = process;
-        elIn.onscroll = () => document.getElementById('gutter-in').scrollTop = elIn.scrollTop;
-        elOut.onscroll = () => document.getElementById('gutter-out').scrollTop = elOut.scrollTop;
+        elIn.onscroll = () => { document.getElementById('gutter-in').scrollTop = elIn.scrollTop; };
+        elOut.onscroll = () => { document.getElementById('gutter-out').scrollTop = elOut.scrollTop; };
     </script>
 </body>
 </html>
